--- a/src/main/resources/templates/films.html
+++ b/src/main/resources/templates/films.html
@@ -3,25 +3,54 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8" />
+    <link th:href="@{/css/bootstrap-3.0.3.min.css}" rel="stylesheet"/>
+    <link th:href="@{/css/styles.css}" rel="stylesheet"/>
 </head>
 <body>
-<h1>Movies</h1>
-<p>The Whole List</p>
-<table>
-<tr>
-    <th>Id</th>
-    <th>Title</th>
-    <th>Description</th>
-    <th>Year</th>
-    <th>Duration</th>
-</tr>
-<tr th:each="f : ${filmList}">
-    <td  th:text="${f.id}"></td>
-    <td th:text="${f.title}"></td>
-    <td th:text="${f.description}"></td>
-    <td th:text="${f.releaseYear}"></td>
-    <td th:text="${f.length}"></td>
-</tr>
-</table>
+<div class="navbar navbar-default">
+    <div class="container">
+        <a class="navbar-brand"><span class="rd-red">My</span><span class="rd-blue">Movies</span></a>
+
+
+        <ul class="nav navbar-nav">
+            <li><a th:href="@{/index}">Home</a></li>
+            <li><a th:href="@{/ex}">MyList</a></li>
+            <li><a th:href="@{/addtolist}">AddToList</a></li>
+        </ul>
+    </div>
+</div>
+<div class="container">
+    <div class="page-header text-center">
+        <h3><span class="rd-red">My</span><span class="rd-blue">List</span> </h3>
+    </div>
+    <div class="row">
+        <div class="col-lg-12">
+            <table class="table table-striped table-hover">
+                <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Title</th>
+                    <th>Description</th>
+                    <th>Year</th>
+                    <th>Duration</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="f : ${filmList}">
+                    <td  th:text="${f.id}"></td>
+                    <td th:text="${f.title}"></td>
+                    <td th:text="${f.description}"></td>
+                    <td th:text="${f.releaseYear}"></td>
+                    <td th:text="${f.length}"></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <hr/>
+</div>
+<script th:src="@{/js/jquery-2.0.2.min.js}"></script>
+<script th:src="@{/js/bootstrap-3.0.3.min.js}"></script>
 </body>
 </html>
