--- a/src/main/resources/templates/addtolist.html
+++ b/src/main/resources/templates/addtolist.html
@@ -23,29 +23,30 @@
     <div class="page-header text-center">
         <h3><span class="rd-red">Add</span><span class="rd-blue">To</span><span class="rd-red">List</span></h3>
     </div>
-    <form class="form-horizontal" method="post" th:action="@{/saveFilm}">
+    <form class="form-horizontal" method="post" th:action="@{/saveFilm}" th:object="${myFilm}">
+        <input type="hidden" class="form-control" id="id" name="id" th:field="*{id}"/>
         <div class="form-group">
             <label for="title" class="col-sm-2 control-label">Title</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="title" name="title"/>
+                <input type="text" class="form-control" id="title" name="title" th:field="*{title}"/>
             </div>
         </div>
         <div class="form-group">
             <label for="description" class="col-sm-2 control-label">Description</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="description" name="description"/>
+                <input type="text" class="form-control" id="description" name="description" th:field="*{description}"/>
             </div>
         </div>
         <div class="form-group">
             <label for="year" class="col-sm-2 control-label">Year</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="year" name="releaseYear"/>
+                <input type="text" class="form-control" id="year" name="releaseYear" th:field="*{releaseYear}"/>
             </div>
         </div>
         <div class="form-group">
             <label for="duration" class="col-sm-2 control-label">Duration</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="duration" name="length"/>
+                <input type="text" class="form-control" id="duration" name="length" value="test" th:field="*{length}" />
             </div>
         </div>
         <div class="form-group">
