--- a/src/main/resources/templates/addtolist.html
+++ b/src/main/resources/templates/addtolist.html
@@ -46,7 +46,7 @@
         <div class="form-group">
             <label for="duration" class="col-sm-2 control-label">Duration</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="duration" name="length" value="test" th:field="*{length}" />
+                <input type="text" class="form-control" id="duration" name="length" th:field="*{length}" />
             </div>
         </div>
         <div class="form-group">
