--- a/src/main/resources/templates/addtolist.html
+++ b/src/main/resources/templates/addtolist.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:form="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8"/>
     <link th:href="@{/css/bootstrap-3.0.3.min.css}" rel="stylesheet"/>
@@ -47,6 +47,7 @@
             <label for="duration" class="col-sm-2 control-label">Duration</label>
             <div class="col-sm-10">
                 <input type="text" class="form-control" id="duration" name="length" th:field="*{length}" />
+
             </div>
         </div>
         <div class="form-group">
