--- a/src/main/resources/templates/films.html
+++ b/src/main/resources/templates/films.html
@@ -29,10 +29,10 @@
                 <thead>
                 <tr>
 
-                    <th>Title</th>
-                    <th>Description</th>
-                    <th>Year</th>
-                    <th>Duration</th>
+                    <th><a th:href="@{/sortByTitle}">Title</a></th>
+                    <th><a th:href="@{/sortByDescription}">Description</a></th>
+                    <th><a th:href="@{/sortByYear}">Year</a></th>
+                    <th><a th:href="@{/sortByDuration}">Duration</a></th>
                     <th>Actions</th>
 
                 </tr>
