description text will be abbreviated when shown in movie list

--- a/src/main/resources/templates/films.html
+++ b/src/main/resources/templates/films.html
@@ -41,7 +41,7 @@
                 <tr th:each="f : ${filmList}">
 
                     <td th:text="${f.title}"></td>
-                    <td th:text="${f.description}"></td>
+                    <td th:text="${#strings.abbreviate(f.description,20)}"></td>
                     <td th:text="${f.releaseYear}"></td>
                     <td th:text="${f.length}"></td>
                     <td>
