--- a/src/main/resources/templates/moviedetails.html
+++ b/src/main/resources/templates/moviedetails.html
@@ -9,7 +9,7 @@
 <body>
 <div class="navbar navbar-default">
     <div class="container">
-        <a class="navbar-brand"><span class="rd-red"></span></a>
+        <a class="navbar-brand"><span class="rd-red">My</span><span class="rd-blue">Movies</span></a>
 
 
         <ul class="nav navbar-nav">
