--- a/src/main/resources/templates/addtolist.html
+++ b/src/main/resources/templates/addtolist.html
@@ -60,6 +60,15 @@
             <div class="col-sm-10 col-sm-offset-2 help-block" th:if="${#fields.hasErrors('length')}" th:errors="*{length}">
             </div>
         </div>
+        <div th:class="${#fields.hasErrors('posterUrl')? 'form-group has-error': 'form-group'}">
+            <label for="posterurl" class="col-sm-2 control-label">Poster URL</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="posterurl" name="length" th:field="*{posterUrl}" />
+
+            </div>
+            <div class="col-sm-10 col-sm-offset-2 help-block" th:if="${#fields.hasErrors('length')}" th:errors="*{posterUrl}">
+            </div>
+        </div>
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
                 <button type="submit" class="btn btn-default">Add</button>
